--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 /Makefile -text
 /SH-RUtranslations_nouns2.txt -text
 /apertium-sh-ru.sh-ru.dix -text
+text/story.ru.txt -text svneol=unset#application/octet-stream
+text/story.sh.txt -text
