--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 /Makefile -text
 /SH-RUtranslations_nouns2.txt -text
+/apertium-sh-ru.ru.dix -text
 /apertium-sh-ru.sh-ru.dix -text
 text/story.ru.txt -text svneol=unset#application/octet-stream
 text/story.sh.txt -text
