--- a/.gitattributes
+++ b/.gitattributes
@@ -2,18 +2,18 @@
 /Makefile -text
 /README -text
 /UnknownWords -text
-/apertium-sh-ru.post-sh.dix -text
-/apertium-sh-ru.ru-sh.lrx -text
-/apertium-sh-ru.ru-sh.rlx -text
-/apertium-sh-ru.ru-sh.t1x -text
-/apertium-sh-ru.ru-sh.t2x -text
-/apertium-sh-ru.ru-sh.t3x -text
-/apertium-sh-ru.ru.acx -text
-/apertium-sh-ru.ru.dix -text
-/apertium-sh-ru.sh-ru.dix -text
-/apertium-sh-ru.sh-ru.lrx -text
-/apertium-sh-ru.sh-ru.t1x -text
-/apertium-sh-ru.sh-ru.t2x -text
-/apertium-sh-ru.sh-ru.t3x -text
+/apertium-bhs-rus.bhs-rus.dix -text
+/apertium-bhs-rus.bhs-rus.lrx -text
+/apertium-bhs-rus.bhs-rus.t1x -text
+/apertium-bhs-rus.bhs-rus.t2x -text
+/apertium-bhs-rus.bhs-rus.t3x -text
+/apertium-bhs-rus.post-sh.dix -text
+/apertium-bhs-rus.ru.acx -text
+/apertium-bhs-rus.ru.dix -text
+/apertium-bhs-rus.rus-bhs.lrx -text
+/apertium-bhs-rus.rus-bhs.rlx -text
+/apertium-bhs-rus.rus-bhs.t1x -text
+/apertium-bhs-rus.rus-bhs.t2x -text
+/apertium-bhs-rus.rus-bhs.t3x -text
 text/story.ru.txt -text svneol=unset#application/octet-stream
 text/story.sh.txt -text
