--- a/.gitattributes
+++ b/.gitattributes
@@ -2,19 +2,19 @@
 /Makefile -text
 /README -text
 /UnknownWords -text
-/apertium-bhs-rus.bhs-rus.dix -text
-/apertium-bhs-rus.bhs-rus.lrx -text
-/apertium-bhs-rus.bhs-rus.t1x -text
-/apertium-bhs-rus.bhs-rus.t2x -text
-/apertium-bhs-rus.bhs-rus.t3x -text
-/apertium-bhs-rus.post-bhs.dix -text
-/apertium-bhs-rus.rus-bhs.lrx -text
-/apertium-bhs-rus.rus-bhs.rlx -text
-/apertium-bhs-rus.rus-bhs.t1x -text
-/apertium-bhs-rus.rus-bhs.t2x -text
-/apertium-bhs-rus.rus-bhs.t3x -text
-/apertium-bhs-rus.rus.acx -text
-/apertium-bhs-rus.rus.dix -text
+/apertium-hbs-rus.hbs-rus.dix -text
+/apertium-hbs-rus.hbs-rus.lrx -text
+/apertium-hbs-rus.hbs-rus.t1x -text
+/apertium-hbs-rus.hbs-rus.t2x -text
+/apertium-hbs-rus.hbs-rus.t3x -text
+/apertium-hbs-rus.post-hbs.dix -text
+/apertium-hbs-rus.rus-hbs.lrx -text
+/apertium-hbs-rus.rus-hbs.rlx -text
+/apertium-hbs-rus.rus-hbs.t1x -text
+/apertium-hbs-rus.rus-hbs.t2x -text
+/apertium-hbs-rus.rus-hbs.t3x -text
+/apertium-hbs-rus.rus.acx -text
+/apertium-hbs-rus.rus.dix -text
 /modes.xml -text
 text/story.bhs.txt -text
 text/story.rus.txt -text svneol=unset#application/octet-stream
