--- a/Makefile.am
+++ b/Makefile.am
@@ -29,27 +29,26 @@ TARGETS_COMMON = $(BASENAME).$(LANG1a).dix  $(BASENAME).$(LANG1b).dix $(BASENAME
 
 #    $(PREFIX1).autopgen.bin $(PREFIX2).autopgen.bin 
 
-$(BASENAME).$(LANG1a).dix: $(BASENAME).$(LANG1).metadix
-	xsltproc --stringparam alt $(LANG1a) --stringparam var $(VAR1) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+$(BASENAME).$(LANG1a).dix: $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix
+	xsltproc --stringparam alt $(LANG1a) --stringparam var $(VAR1) alt.xsl $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix >$@
 
 $(PREFIX2a).autogen.bin: $(BASENAME).$(LANG1a).dix
-	apertium-validate-dictionary $(BASENAME).$(LANG1a).dix
+#	apertium-validate-dictionary $(BASENAME).$(LANG1a).dix
 	lt-comp rl $(BASENAME).$(LANG1a).dix $@
 
-$(BASENAME).$(LANG1b).dix: $(BASENAME).$(LANG1).metadix
-	xsltproc --stringparam alt $(LANG1b) --stringparam var $(VAR1) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+$(BASENAME).$(LANG1b).dix: $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix
+	xsltproc --stringparam alt $(LANG1b) --stringparam var $(VAR1) alt.xsl $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix >$@
 
 $(PREFIX2b).autogen.bin: $(BASENAME).$(LANG1b).dix
-	apertium-validate-dictionary $(BASENAME).$(LANG1b).dix
+#	apertium-validate-dictionary $(BASENAME).$(LANG1b).dix
 	lt-comp rl $(BASENAME).$(LANG1b).dix $@
 
-$(BASENAME).$(LANG1c).dix: $(BASENAME).$(LANG1).metadix
-	xsltproc --stringparam alt $(LANG1c) --stringparam var $(VAR2) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+$(BASENAME).$(LANG1c).dix: $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix
+	xsltproc --stringparam alt $(LANG1c) --stringparam var $(VAR1) alt.xsl $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix >$@
 
 $(PREFIX2c).autogen.bin: $(BASENAME).$(LANG1c).dix
-	apertium-validate-dictionary $(BASENAME).$(LANG1c).dix
+#	apertium-validate-dictionary $(BASENAME).$(LANG1c).dix
 	lt-comp rl $(BASENAME).$(LANG1c).dix $@
-
 
 $(PREFIX2a).autolex.bin: $(BASENAME).$(PREFIX2a).lrx
 	lrx-comp $(BASENAME).$(PREFIX2a).lrx $@
@@ -61,48 +60,53 @@ $(PREFIX2c).autolex.bin: $(BASENAME).$(PREFIX2c).lrx
 	lrx-comp $(BASENAME).$(PREFIX2c).lrx $@
 
 
-
-$(BASENAME).$(LANG1).dix: $(BASENAME).$(LANG1).metadix
-	xsltproc --stringparam alt $(LANG1) --stringparam var $(VAR1) alt.xsl $(BASENAME).$(LANG1).metadix >$@ 
+$(BASENAME).$(LANG1).dix: $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix
+	xsltproc --stringparam alt $(LANG1) --stringparam var $(VAR1) alt.xsl $(AP_SRC1)/apertium-$(LANG1).$(LANG1).metadix >$@ 
 
 $(PREFIX1).automorf.bin: $(BASENAME).$(LANG1).dix
-	apertium-validate-dictionary $(BASENAME).$(LANG1).dix
-	lt-comp lr $(BASENAME).$(LANG1).dix $@ $(BASENAME).$(LANG1).acx
+#	apertium-validate-dictionary $(BASENAME).$(LANG1).dix
+	lt-comp lr $(BASENAME).$(LANG1).dix $@ $(AP_SRC1)/apertium-$(LANG1).$(LANG1).acx
 
-$(PREFIX1).autogen.bin: $(BASENAME).$(LANG2).dix
-	apertium-validate-dictionary $(BASENAME).$(LANG2).dix
-	lt-comp rl $(BASENAME).$(LANG2).dix $@
+$(PREFIX1).autogen.bin: $(AP_SRC2)/apertium-$(LANG2).$(LANG2).dix
+	apertium-validate-dictionary $<
+	lt-comp rl $< $@
 
-$(PREFIX1).rlx.bin: $(BASENAME).$(PREFIX1).rlx
-	cg-comp $(BASENAME).$(PREFIX1).rlx $@
+$(PREFIX1).rlx.bin: $(AP_SRC1)/apertium-$(LANG1).$(LANG1).rlx
+	cg-comp $< $@
 
-$(PREFIX2).rlx.bin: $(BASENAME).$(PREFIX2).rlx
-	cg-comp $(BASENAME).$(PREFIX2).rlx $@
+$(PREFIX2).rlx.bin: $(AP_SRC2)/apertium-$(LANG2).$(LANG2).rlx
+	cg-comp $< $@
+
+$(PREFIX1).prob: $(AP_SRC1)/$(LANG1).prob
+	cp $< $@
+
+$(PREFIX2).prob: $(AP_SRC2)/$(LANG2).prob
+	cp $< $@
 
 $(PREFIX1).autolex.bin: $(BASENAME).$(PREFIX1).lrx
 	lrx-comp $(BASENAME).$(PREFIX1).lrx $@
 
-$(PREFIX2a).autopgen.bin: $(BASENAME).post-$(LANG1).dix
+$(PREFIX2a).autopgen.bin: $(AP_SRC1)/apertium-$(LANG1).post-$(LANG1).dix
 	if [ ! -d .deps ]; then mkdir .deps; fi
-	xsltproc --stringparam alt $(LANG1a) --stringparam var $(VAR1) alt.xsl $(BASENAME).post-$(LANG1).dix >.deps/post-$(LANG1a).dix
+	xsltproc --stringparam alt $(LANG1a) --stringparam var $(VAR1) alt.xsl $< >.deps/post-$(LANG1a).dix
 	apertium-validate-dictionary .deps/post-$(LANG1a).dix
 	lt-comp lr .deps/post-$(LANG1a).dix $@ 
 
-$(PREFIX2b).autopgen.bin: $(BASENAME).post-$(LANG1).dix
+$(PREFIX2b).autopgen.bin: $(AP_SRC1)/apertium-$(LANG1).post-$(LANG1).dix
 	if [ ! -d .deps ]; then mkdir .deps; fi
-	xsltproc --stringparam alt $(LANG1b) --stringparam var $(VAR1) alt.xsl $(BASENAME).post-$(LANG1).dix >.deps/post-$(LANG1b).dix
+	xsltproc --stringparam alt $(LANG1b) --stringparam var $(VAR1) alt.xsl $< >.deps/post-$(LANG1b).dix
 	apertium-validate-dictionary .deps/post-$(LANG1b).dix
 	lt-comp lr .deps/post-$(LANG1b).dix $@ 
 
-$(PREFIX2c).autopgen.bin: $(BASENAME).post-$(LANG1).dix
+$(PREFIX2c).autopgen.bin: $(AP_SRC1)/apertium-$(LANG1).post-$(LANG1).dix
 	if [ ! -d .deps ]; then mkdir .deps; fi
-	xsltproc --stringparam alt $(LANG1c) --stringparam var $(VAR1) alt.xsl $(BASENAME).post-$(LANG1).dix >.deps/post-$(LANG1c).dix
+	xsltproc --stringparam alt $(LANG1c) --stringparam var $(VAR1) alt.xsl $< >.deps/post-$(LANG1c).dix
 	apertium-validate-dictionary .deps/post-$(LANG1c).dix
 	lt-comp lr .deps/post-$(LANG1c).dix $@ 
 
-$(PREFIX2).automorf.bin: $(BASENAME).$(LANG2).dix
+$(PREFIX2).automorf.bin: $(AP_SRC2)/apertium-$(LANG2).$(LANG2).dix
 	apertium-validate-dictionary $(BASENAME).$(LANG2).dix
-	lt-comp lr $(BASENAME).$(LANG2).dix $@ $(BASENAME).$(LANG2).acx
+	lt-comp lr $(BASENAME).$(LANG2).dix $@ $(AP_SRC2)/apertium-$(LANG2).$(LANG2).acx
 
 $(PREFIX1).autobil.bin: $(BASENAME).$(PREFIX1).dix
 	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
@@ -113,9 +117,9 @@ $(PREFIX2).autobil.bin: $(BASENAME).$(PREFIX1).dix
 	apertium-validate-dictionary $(BASENAME).$(PREFIX1).dix
 	lt-comp rl $(BASENAME).$(PREFIX1).dix $@
 
-$(PREFIX1).autopgen.bin: $(BASENAME).post-$(LANG2).dix
-	apertium-validate-dictionary $(BASENAME).post-$(LANG2).dix
-	lt-comp lr $(BASENAME).post-$(LANG2).dix $@
+$(PREFIX1).autopgen.bin: $(AP_SRC2)/apertium-$(LANG2).post-$(LANG2).dix
+	apertium-validate-dictionary $<
+	lt-comp lr $< $@
 
 #
 #	TRANSFER
@@ -146,12 +150,9 @@ $(PREFIX2).t3x.bin: $(BASENAME).$(PREFIX2).t3x
 	apertium-preprocess-transfer $(BASENAME).$(PREFIX2).t3x $@
 
 
-EXTRA_DIST=$(BASENAME).$(LANG1).metadix $(BASENAME).$(PREFIX1).dix \
+EXTRA_DIST=$(BASENAME).$(PREFIX1).dix \
            $(BASENAME).$(LANG2).dix $(BASENAME).$(LANG1).tsx \
            $(BASENAME).$(LANG2).tsx  \
-           $(BASENAME).$(LANG1).acx \
-           $(BASENAME).$(LANG2).acx \
-           $(BASENAME).post-$(LANG2).dix $(BASENAME).post-$(LANG1).dix \
            $(PREFIX1).prob $(PREFIX2).prob \
            $(BASENAME).$(PREFIX1).lrx $(BASENAME).$(PREFIX2a).lrx $(BASENAME).$(PREFIX2b).lrx $(BASENAME).$(PREFIX2c).lrx \
            $(BASENAME).$(PREFIX1).rlx $(BASENAME).$(PREFIX2).rlx \
@@ -162,7 +163,6 @@ EXTRA_DIST=$(BASENAME).$(LANG1).metadix $(BASENAME).$(PREFIX1).dix \
            modes.xml
 
 #           $(LANG1)-tagger-data/README $(LANG2)-tagger-data/README 
-#           $(BASENAME).post-$(LANG1).dix $(BASENAME).post-$(LANG2).dix 
 
 $(PREFIX1).mode: modes.xml
 	apertium-gen-modes modes.xml
