--- a/configure.ac
+++ b/configure.ac
@@ -14,10 +14,7 @@ m4_define([required_apertium_version], [3.2.0])
 PKG_CHECK_MODULES(APERTIUM,   apertium >= required_apertium_version, [], [PKG_CHECK_MODULES(APERTIUM,   apertium-3.2 >= required_apertium_version)])
                           
 
-if test $APERTIUM_VER = 10;
-then MODES="";
-else MODES="modes";
-fi
+MODES="modes";
 
 AC_SUBST(MODES)
 
