--- a/.gitattributes
+++ b/.gitattributes
@@ -23,3 +23,8 @@
 /modes.xml -text
 text/story.hbs.txt -text
 text/story.rus.txt -text svneol=unset#application/octet-stream
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
